# kasmer-multiversx

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  XDay.md  flake.nix  generate-claims.sh
kmxwasm/: .flake8  Makefile  README.md  flake.nix  pyproject.toml  run.sh  status.md
kmxwasm/k-bug/: bug.k  claim.k  kbuild.toml
kmxwasm/k-src/: backend-fixes.md  ceils-syntax.k  ceils.k  elrond-configuration.md  elrond-impl.md  elrond-lemmas.md  elrond-wasm-configuration.md  elrond-wasm.md  kbuild.toml  list-bytesw.k  list-esdttransfer.k  map-bytesw-to-bytesw.k  map-intw-to-bytesw.k  map-intw-to-intw.k  mx-lemmas.md  mx-wasm.md  proof-extensions.md  specification-lemmas.md
kmxwasm/k-src/lemmas/: bytes-normalization-lemmas.md  int-encoding-lemmas.md  int-inequalities-lemmas.md  int-length-lemmas.md  int-normalization-lemmas.md  proven-elrond-lemmas.md  proven-mx-lemmas.md  sparse-bytes-lemmas.md
kmxwasm/k-src/lemmas/proofs/: helper-lemmas.k  helper-lemmas.md  int-inequalities-simple.k  list-size.k  max-inequalities.k  mod-int-total.k  pound-bool.k
kmxwasm/k-src/lemmas/semantics/: destructors.md  elrond-wasm-lemma-proofs.md  mx-wasm-lemma-tests.md  private-specification-lemmas.md  syntax.md  user-operations.md
kmxwasm/k-src/lemmas/sparse-bytes/: get-bytes-range-lemmas.md  get-range-lemmas.md  handle-sparse-bytes-lemmas.md  handle-sparse-bytes.md  replace-at-b-lemmas.md  replace-at-lemmas.md  set-range-lemmas.md  sparse-bytes-lemmas-basic.md  sparse-bytes-lemmas.md  substr-sparse-bytes-lemmas.md
kmxwasm/k-src/lemmas/tests/: bytes-to-int.k  get-range.k  int-encoding.k  int-inequalities-divinttotal.k  int-inequalities-multiplication.k  int-length.k  int-ops.k  length-bytes.k  pound-bool.k  replace-at.k  set-range.k  size.k  substr-bytes.k  substr-sparse-bytes.k
kmxwasm/k-src/summaries/: summaries.k
kmxwasm/samples/: adder.wat  multisig-full.wat  sum-to-n-spec.k  sum-to-n.wat
kmxwasm/samples/sum-to-n/: sum-to-n-spec.k
kmxwasm/src/kmxwasm/: build.py  cell_abstracter.py  execution.py  functions.py  identifiers.py  implication.py  json.py  kast.py  lazy_explorer.py  lazy_explorer.py.orig  nodeprinter.py  paths.py  printers.py  proofs.py  property.py  rules.py  running.py  specs.py  term_optimizer.py  timing.py  tools.py  wasm_cell.py  wasm_krun_initializer.py  wasm_types.py
kmxwasm/src/kmxwasm/ast/: collections.py  configuration.py  domains.py  elrond.py  generic.py  mx.py  wasm.py
kmxwasm/src/kmxwasm/kasmer/: __main__.py  build.py  fuzz.py  utils.py  verify.py
kmxwasm/src/kmxwasm/kasmerx/: __main__.py  build.py  fuzz.py  utils.py  verify.py
kmxwasm/src/kmxwasm/kdist/: plugin.py
kmxwasm/src/kmxwasm/lemmas/: expression.py  generate.py  lemma_tree.py  lemmas.py  proof.py  prove.py
kmxwasm/src/kmxwasm/property_testing/: cell_abstracter.py  implication.py  paths.py  printers.py  running.py  wasm_krun_initializer.py
kmxwasm/src/kmxwasm/testing/: fixtures.py
kmxwasm/src/tests/booster/: test_booster.py
kmxwasm/src/tests/integration/: test_booster.py  test_claims.py  test_integration.py  test_utils.py
kmxwasm/src/tests/lemma_tests/: test_lemmas.py
kmxwasm/src/tests/lemma_unittests/: test_lemma_unittests.py
kmxwasm/src/tests/proofs/: test_lemma_proofs.py
kmxwasm/src/tests/unit/: test_unit.py
tests/contracts/adder-int-64/: Cargo.toml
tests/contracts/adder-int-64/meta/: Cargo.toml
tests/contracts/adder-int-64/output/: adder-int-64.abi.json  adder-int-64.imports.json  adder-int-64.mxsc.json  (+1 more)
tests/contracts/test-adder-int-64/: Cargo.toml  kasmer.json
(+187 files in other folders)
